vlib/v/checker/tests/overload_operator_difference_in_operand_types.out
vlib/v/checker/tests/overload_operator_difference_in_operand_types.vv:9:1: error: the receiver type `Resources` should be the same type as the operand `&Resources`
    7 | }
    8 | 
    9 | fn (a Resources) < (b &Resources) bool {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   10 |     return a.hru < b.hru && a.sru < b.sru && a.cru < b.cru && a.mru < b.mru
   11 | }
vlib/v/checker/tests/overload_operator_difference_in_operand_types.vv:13:1: error: the receiver type `&Resources` should be the same type as the operand `Resources`
   11 | }
   12 | 
   13 | fn (a &Resources) == (b Resources) bool {
      | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   14 |     return a.hru == b.hru
   15 | }
